# earthquake-api

./: .gitignore  README.md  app (1).py  app.py  earthquake_model.pkl  earthquakes_jordan_prepared.csv  predict_quake.py  prepare_data.py  pyproject.toml  render.yaml  requirements.txt  start.sh  train_model.py
earthquake_ai_prediction_project/: predict_quake.py  prepare_data.py  render.yaml
earthquake_ai_prediction_project/quake-api/: app.py  train_model.py
quake-api/: app.py  jordan_earthquakes_2015_2025 (1).csv
templates/: realtime.html
