[tool.poetry]
name = "earthquake-api"
version = "0.1.0"
description = "Earthquake prediction API using Flask and ML"
authors = ["Tasneem Osama <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "*"
pandas = "*"
scikit-learn = "*"
joblib = "*"
requests = "*"
gunicorn = "*"
geopy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
