[tool.poetry]
name = "earthquake-api"
version = "0.1.0"
description = "Earthquake prediction API using Flask and ML"
authors = ["Tasneem Osama <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Flask = "*"
pandas = "*"
scikit-learn = "*"
joblib = "*"
requests = "*"
gunicorn = "*"
geopy = "*"
waitress = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
